# RootChain

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.gitlab/duo-flows/: rootchain.yml
.gitlab/skills/rootchain/: SKILL.md
docs/: ai_catalog_publish.md  configuration.md  demo_issue.md  demo_script.md  devpost_submission.md  orbit_queries.md  sentry_setup.md  submission_guide.md  troubleshooting.md
receiver/: Dockerfile  fly.toml  main.py  requirements.txt
scripts/: generate_test_issue.py  test_orbit_connection.py  validate_flow.py
src/rootchain/: __init__.py  blame_chain.py  config.py  gitlab_client.py  issue_formatter.py  models.py  orbit_client.py  orchestrator.py  sentry_parser.py
tests/: conftest.py
tests/fixtures/: gitlab_issue_sentry.json  orbit_response_empty.json  orbit_response_full.json  sentry_go.json  sentry_java.json  sentry_minified_js.json  sentry_node.json  sentry_python.json  sentry_ruby.json
tests/integration/: test_orchestrator.py
tests/unit/: test_blame_chain.py  test_config.py  test_gitlab_client.py  test_issue_formatter.py  test_orbit_client.py  test_orchestrator.py  test_sentry_parser.py
